<resources>
    <string name="app_name">SPG Grupo 7</string>
    <string name="title_active">Activas</string>
    <string name="title_inactive">Inactivas</string>
    <string name="title_profile">Perfil</string>
    <string name="title_stats">Estadísticas</string>
    <string name="text_password">Contraseña</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="email">Email</string>
    <string name="detalle">Detalle</string>
    <string name="ver_principios">Ver principios</string>
    <string name="nombre_del_productor">Nombre del Productor</string>
    <string name="integrantes">Integrantes</string>
    <string name="fecha">Fecha</string>
    <string name="superficie_total">Superficie total</string>
    <string name="superficie_con_agroecolog_a">Superficie con agroecología</string>
    <string name="visita">Visita</string>
    <string name="principios">Principios</string>
    <string name="Parámetros">Parámetros</string>
    <string name="historial">Historial</string>
    <string name="observaciones">Observaciones</string>
    <string name="estado_del_principio">Estado del principio</string>
    <string name="titulo_del_principio">Título del principio</string>
    <string name="checklist">Checklist</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="crosshair">Crosshair</string>
    <string name="fondo_del_perfil">Fondo del perfil</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="separador">Separador</string>
    <string name="no_hay_datos_disponibles">No hay datos disponibles</string>
    <string name="imagen_visita">Imagen visita</string>
    <string name="dibujar">Dibujar</string>
    <string name="guardar">Guardar</string>
    <string name="marcar">Marcar</string>
    <string name="cancelar">Cancelar</string>
    <string name="visitas_activas">Visitas Activas</string>
    <string name="mostrar_todas_las_visitas">Mostrar todas las visitas</string>
    <string name="calendario">Calendario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tenes_una_cuenta_crear_usuario">No tenes una cuenta? Crear usuario</string>
    <string name="ingrese_un_mensaje">Ingrese un mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="posicion">Posición</string>
    <string name="email_dots">Email:</string>
    <string name="celular_dots">Celular:</string>
    <string name="org">Org. :</string>
    <string name="rol">Rol:</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="celular">Celular</string>
    <string name="organizacion">Organización</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="ya_tenes_una_cuenta_iniciar_sesion">Ya tenes una cuenta? Iniciar sesión</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="porcentaje_de_visitas_aprobadas">Porcentaje de visitas aprobadas</string>
    <string name="porcentaje_de_principios_aprobados">Porcentaje de principios aprobados</string>
    <string name="descargar_json">Descargar JSON</string>
    <string name="ver_mapa">Ver mapa</string>
</resources>