<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_obs"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="15dp"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.visit.ObservationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="30sp"
        android:gravity="center"
        android:text="@string/observaciones"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/detailTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_list"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="5sp"
            android:layout_marginVertical="15sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="0"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/layout_gchat_chatbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/input_msg"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@+id/btn_send"
                android:background="@android:color/transparent"
                android:hint="@string/ingrese_un_mensaje"
                android:inputType="text"
                android:maxLines="6"
                tools:ignore="Autofill" />

            <ImageButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/enviar"
                android:src="?attr/btn_send" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
