<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.active.ActiveFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingTop="?attr/actionBarSize"
                android:text="@string/visitas_activas"
                android:textAllCaps="false"
                android:textColor="?attr/colorBW"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/search_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/search_view_bg"
                app:iconifiedByDefault="false"
                app:layout_constraintTop_toBottomOf="@id/title_active"
                app:queryHint="Buscar visitas..." />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/extra_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintTop_toBottomOf="@+id/search_view">

                <Button
                    android:id="@+id/btn_filtro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/mostrar_todas_las_visitas"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/calendario"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.skydoves.androidveil.VeilRecyclerFrameView
                android:id="@+id/active_list"
                android:layout_width="match_parent"
                android:layout_marginBottom="?attr/actionBarSize"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none"
                app:veilFrame_layout="@layout/list_visit_element"
                app:veilFrame_veiled="true"
                app:veilFrame_shimmerEnable="true"
                app:veilFrame_baseAlpha="0.6"
                app:veilFrame_highlightAlpha="1.0"
                app:veilFrame_radius="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintTop_toBottomOf="@id/extra_btn_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>